--- a/app/src/main/res/layout/fragment_reproductor_singleton.xml
+++ b/app/src/main/res/layout/fragment_reproductor_singleton.xml
@@ -20,12 +20,13 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.card.MaterialCardView
+
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="70dp"
                 android:background="#00000000"
                 android:elevation="5dp"
-
                 app:cardCornerRadius="40dp">
 
                 <ImageView
@@ -61,8 +62,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/fragmentReproductorNombreTrack"
                 android:layout_width="wrap_content"
@@ -91,14 +90,14 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/botonPreviousTrack"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_previous_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/botonPreviousTrack"
                 android:background="#00FAF6F6"
                 android:paddingRight="15dp"
-                app:layout_constraintRight_toLeftOf="@+id/fragmentReproductorPlayPause"/>
+                android:src="@drawable/ic_previous_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/fragmentReproductorPlayPause" />
 
             <ImageView
                 android:id="@+id/fragmentReproductorPlayPause"
@@ -106,21 +105,21 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:background="#00FAF6F6"
-                android:src="@drawable/ic_play_circle_filled" />
+                android:src="@drawable/ic_play_circle_filled"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
             <ImageView
-                android:layout_width="70dp"
                 android:id="@+id/botonNextTrack"
+                android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_next_24"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:background="#00FAF6F6"
                 android:paddingLeft="15dp"
-                app:layout_constraintLeft_toRightOf="@+id/fragmentReproductorPlayPause"/>
+                android:src="@drawable/ic_next_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/fragmentReproductorPlayPause" />
 
 
             <ImageButton
